--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "eslint": "^4.8.0",
-    "express": "^4.16.2",
-    "rxjs": "^5.4.3",
-    "smoothie": "^1.32.0",
-    "ws": "^3.2.0"
+    "express": "^4.16.2"
   }
 }
