--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,4 +1,29 @@
 {
   "short_name": "Roger E.",
-  "theme_color": "#3b4874"
+  "theme_color": "#3b4874",
+  "icons": [{
+    "src": "/img/homescreen48.png",
+    "sizes": "48x48",
+    "type": "image/png"
+  }, {
+    "src": "/img/homescreen72.png",
+    "sizes": "72x72",
+    "type": "image/png"
+  }, {
+    "src": "/img/homescreen96.png",
+    "sizes": "96x96",
+    "type": "image/png"
+  }, {
+    "src": "/img/homescreen144.png",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "/img/homescreen168.png",
+    "sizes": "168x168",
+    "type": "image/png"
+  }, {
+    "src": "/img/homescreen192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
