--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,7 +2,7 @@
   "name": "RogerEhmpke",
   "short_name": "Roger E.",
   "start_url": "/",
-  "display": "brower",
+  "display": "browser",
   "background_color": "#fff",
   "description": "Roger Ehmpke - Frontend Web Developer website.",
   "theme_color": "#3b4874",
