clean express folder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mysite",
   "version": "1.0.0",
   "description": "Roger Ehmpke portfolio site",
-  "main": "index.js",
+  "main": "./server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "browser-sync start --server --files './static/css/*.css'",
