--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "eslint": "^4.8.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
