Add production npm script for webpack

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack",
+    "prod": "npm run webpack -- --env.mode production",
     "serve": "browser-sync start --server --files './static/*'",
     "scss": "node-sass --output-style compressed -o ./static/css ./scss",
     "build:css": "run-s scss",
