--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Roger Ehmpke portfolio site",
   "main": "./server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "webpack": "webpack",
     "prod": "npm run webpack -- --env.mode production",
     "serve": "browser-sync start --server --files './static/*'",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
+    "jest": "^24.1.0",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^5.2.0"
